syntax = "proto2";

package MMPro.micromsg;

import "BaseRequest.proto";

message GetContactLabelListRequest {
	required BaseRequest _BaseRequest = 1;
}
