syntax = "proto2";

package MMPro.micromsg;

import "BaseResponse.proto";

message VoipCancelInviteResp {
	required BaseResponse _BaseResponse = 1;
	required int32 _RoomId = 2;
	required int64 _RoomKey = 3;
}
